// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationship searching Test: customPrelist search for Text 1`] = `
<div
  class="show"
>
  {
  "prefix": "customPre",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 1,
        "myString": "my  iText 0",
        "myNum": 420
      },
      {
        "_id": 3,
        "myString": "my  iText 2",
        "myNum": 422
      },
      {
        "_id": 5,
        "myString": "my  iText 4",
        "myNum": 424
      },
      {
        "_id": 7,
        "myString": "my  iText 6",
        "myNum": 426
      },
      {
        "_id": 9,
        "myString": "my  iText 8",
        "myNum": 428
      }
    ],
    "total": 5,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "customPre": {
      "myString": "Text"
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: customPrelist search for my 1`] = `
<div
  class="show"
>
  {
  "prefix": "customPre",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 1,
        "myString": "my  iText 0",
        "myNum": 420
      },
      {
        "_id": 2,
        "myString": "my null1",
        "myNum": 421
      },
      {
        "_id": 3,
        "myString": "my  iText 2",
        "myNum": 422
      },
      {
        "_id": 4,
        "myString": "my null3",
        "myNum": 423
      },
      {
        "_id": 5,
        "myString": "my  iText 4",
        "myNum": 424
      },
      {
        "_id": 6,
        "myString": "my null5",
        "myNum": 425
      },
      {
        "_id": 7,
        "myString": "my  iText 6",
        "myNum": 426
      },
      {
        "_id": 8,
        "myString": "my null7",
        "myNum": 427
      },
      {
        "_id": 9,
        "myString": "my  iText 8",
        "myNum": 428
      },
      {
        "_id": 10,
        "myString": "my null9",
        "myNum": 429
      }
    ],
    "total": 10,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "customPre": {
      "myString": "my"
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: customPrelist search for my but one value should be excluded 1`] = `
<div
  class="show"
>
  {
  "prefix": "customPre",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 2,
        "myString": "my null1",
        "myNum": 421
      },
      {
        "_id": 3,
        "myString": "my  iText 2",
        "myNum": 422
      },
      {
        "_id": 4,
        "myString": "my null3",
        "myNum": 423
      },
      {
        "_id": 5,
        "myString": "my  iText 4",
        "myNum": 424
      },
      {
        "_id": 6,
        "myString": "my null5",
        "myNum": 425
      },
      {
        "_id": 7,
        "myString": "my  iText 6",
        "myNum": 426
      },
      {
        "_id": 8,
        "myString": "my null7",
        "myNum": 427
      },
      {
        "_id": 9,
        "myString": "my  iText 8",
        "myNum": 428
      },
      {
        "_id": 10,
        "myString": "my null9",
        "myNum": 429
      }
    ],
    "total": 9,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "customPre": {
      "myString": "my",
      "_id": {
        "$nin": [
          1
        ]
      }
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: customPrelist search for null 1`] = `
<div
  class="show"
>
  {
  "prefix": "customPre",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 2,
        "myString": "my null1",
        "myNum": 421
      },
      {
        "_id": 4,
        "myString": "my null3",
        "myNum": 423
      },
      {
        "_id": 6,
        "myString": "my null5",
        "myNum": 425
      },
      {
        "_id": 8,
        "myString": "my null7",
        "myNum": 427
      },
      {
        "_id": 10,
        "myString": "my null9",
        "myNum": 429
      }
    ],
    "total": 5,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "customPre": {
      "myString": "null"
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: customPresearch for Text 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: customPresearch for my 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: customPresearch for my but one value should be excluded 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: customPresearch for null 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: list search for Text 1`] = `
<div
  class="show"
>
  {
  "prefix": "",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 1,
        "myString": "my  iText 0",
        "myNum": 420
      },
      {
        "_id": 3,
        "myString": "my  iText 2",
        "myNum": 422
      },
      {
        "_id": 5,
        "myString": "my  iText 4",
        "myNum": 424
      },
      {
        "_id": 7,
        "myString": "my  iText 6",
        "myNum": 426
      },
      {
        "_id": 9,
        "myString": "my  iText 8",
        "myNum": 428
      }
    ],
    "total": 5,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "myString": "Text"
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: list search for my 1`] = `
<div
  class="show"
>
  {
  "prefix": "",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 2,
        "myString": "my  iText 0",
        "myNum": 420
      },
      {
        "_id": 3,
        "myString": "my null1",
        "myNum": 421
      },
      {
        "_id": 4,
        "myString": "my  iText 2",
        "myNum": 422
      },
      {
        "_id": 5,
        "myString": "my null3",
        "myNum": 423
      },
      {
        "_id": 6,
        "myString": "my  iText 4",
        "myNum": 424
      },
      {
        "_id": 7,
        "myString": "my null5",
        "myNum": 425
      },
      {
        "_id": 8,
        "myString": "my  iText 6",
        "myNum": 426
      },
      {
        "_id": 9,
        "myString": "my null7",
        "myNum": 427
      },
      {
        "_id": 10,
        "myString": "my  iText 8",
        "myNum": 428
      },
      {
        "_id": 11,
        "myString": "my null9",
        "myNum": 429
      }
    ],
    "total": 10,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "myString": "my"
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: list search for my but one value should be excluded 1`] = `
<div
  class="show"
>
  {
  "prefix": "",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 2,
        "myString": "my null1",
        "myNum": 421
      },
      {
        "_id": 3,
        "myString": "my  iText 2",
        "myNum": 422
      },
      {
        "_id": 4,
        "myString": "my null3",
        "myNum": 423
      },
      {
        "_id": 5,
        "myString": "my  iText 4",
        "myNum": 424
      },
      {
        "_id": 6,
        "myString": "my null5",
        "myNum": 425
      },
      {
        "_id": 7,
        "myString": "my  iText 6",
        "myNum": 426
      },
      {
        "_id": 8,
        "myString": "my null7",
        "myNum": 427
      },
      {
        "_id": 9,
        "myString": "my  iText 8",
        "myNum": 428
      },
      {
        "_id": 10,
        "myString": "my null9",
        "myNum": 429
      }
    ],
    "total": 9,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "myString": "my",
    "_id": {
      "$nin": [
        1
      ]
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: list search for null 1`] = `
<div
  class="show"
>
  {
  "prefix": "",
  "form": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "_id": 2,
        "myString": "my null1",
        "myNum": 421
      },
      {
        "_id": 4,
        "myString": "my null3",
        "myNum": 423
      },
      {
        "_id": 6,
        "myString": "my null5",
        "myNum": 425
      },
      {
        "_id": 8,
        "myString": "my null7",
        "myNum": 427
      },
      {
        "_id": 10,
        "myString": "my null9",
        "myNum": 429
      }
    ],
    "total": 5,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "myString": "null"
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`Relationship searching Test: nothing yet 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: nothing yet 2`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: search for Text 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: search for my 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: search for my but one value should be excluded 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship searching Test: search for null 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          },
          {
            "mapTo": "_id",
            "type": 2,
            "validate": {
              "type": 2
            }
          }
        ]
      }
    ]
  }
}
</div>
`;
